# MiniMill-Video-ColorCoding.

./: .gitignore  PLAN.md  README.md  debug_import.py  detections.jsonl  pyproject.toml
.github/: copilot-instructions.md
Final Project 2/: index.html  options.html  render.html  results.html  upload.html
Final Project 2/css/: style.css
Final Project 2/images/: README.md
Final Project 2/js/: main.js  options.js  render.js  results.js  upload.js
configs/: sample.config.yaml
docs/: calibration_improvements.md  design_decisions.md  faq.md  module_guide.md  pipeline.md  presentation_guide.md  quick_ref.md  session_log.md  slides.md  technical_primer.md  testing_criteria.md  tuning_log.md  visual_checklist.md  weekly_report_week5.md
docs/test_reports/: report_2025-11-19.md
projectContext/: Project Proposal.MolCop-Eduardo.F2025 (1).docx  brainstormingProject.docx  mill_presenter_context.txt  mill_presentter_context.txt
scripts/: create_roi_circle.py  create_roi_mask.py  debug_vision.py  demo.ps1  repro_synthetic.py  run.ps1  run_detection.py  setup.ps1  test_vision.py
src/mill_presenter/: app.py
src/mill_presenter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mill_presenter/core/: cache.py  calibration.py  exporter.py  models.py  overlay.py  (+3 more)
tests/: conftest.py  test_cache.py  test_calibration_tool.py  test_cli_runner.py  test_config_saving.py  test_exporter.py  test_main_window.py  test_models.py  test_orchestrator.py  test_overlay.py  test_playback.py  test_playback_controller.py  test_processor.py  test_roi_tool.py  test_ui_basic.py
(+7 files in other folders)
